--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ DerivedData/
 # NB: slash on the end, so we only remove the FOLDER, not any files that were badly named "build"
 
 build/
+Build/
 
 
 #####
