--- a/.github/workflows/Vienna.yml
+++ b/.github/workflows/Vienna.yml
@@ -5,7 +5,7 @@ on: pull_request
 jobs:
   test:
     name: Test
-    runs-on: macOS-latest
+    runs-on: macos-11.0
 
     steps:
     - name: Install SwiftLint
