--- a/Vienna/Codesigning.xcconfig
+++ b/Vienna/Codesigning.xcconfig
@@ -3,5 +3,8 @@
 // https://help.apple.com/xcode/#/dev745c5c974
 //
 
-// This file has to be created manually, per release instructions.
+CODE_SIGN_IDENTITY = Apple Development
+
+// This file has to be created manually, per release instructions. This include
+// has to be put at the end to override the CODE_SIGN_IDENTITY build setting.
 #include? "../Scripts/Resources/CS-ID.xcconfig"
