--- a/Vienna/Info.plist
+++ b/Vienna/Info.plist
@@ -136,6 +136,8 @@
 	<string>ViennaApp</string>
 	<key>NSSupportsAutomaticGraphicsSwitching</key>
 	<string>YES</string>
+	<key>OSAScriptingDefinition</key>
+	<string>Vienna.sdef</string>
 	<key>SUPublicDSAKeyFile</key>
 	<string>SparklePublicKey.pem</string>
 	<key>UTExportedTypeDeclarations</key>
