--- a/.github/workflows/Vienna.yml
+++ b/.github/workflows/Vienna.yml
@@ -5,11 +5,14 @@ on: pull_request
 jobs:
   test:
     name: Test
-    runs-on: macos-11.0
+    runs-on: macos-11
+    timeout-minutes: 15
 
     steps:
     - name: Set up Git repository
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Build Xcode project
       run: xcodebuild -project Vienna.xcodeproj -scheme Vienna -configuration Development build-for-testing | xcpretty && exit ${PIPESTATUS[0]}
     - name: Test Xcode project
