--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -78,7 +78,7 @@ file_header:
   required_pattern: |
     \/\/
     \/\/  SWIFTLINT_CURRENT_FILENAME
-    \/\/  Vienna(\s?\w+)*
+    \/\/  Vienna
     \/\/
     \/\/  Copyright (\d{4}|\d{4}-\d{4})(\s?\w+)*
     \/\/
